[gd_scene load_steps=5 format=3 uid="uid://frabumxfgk8f"]

[ext_resource type="Script" path="res://Scenes/Games/Utility/Kartenstapel/Discardpile/discardpile.gd" id="1_w7cn4"]

[sub_resource type="Animation" id="Animation_dnmcf"]
resource_name = "NewTopCard"
length = 0.65
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardFrame/AnimationBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.65),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 130), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardFrame/AnimationBody:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.65),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.65),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"changeTopCards"
}]
}

[sub_resource type="Animation" id="Animation_ik7i4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardFrame/AnimationBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 130)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardFrame/AnimationBody:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_72avw"]
_data = {
"NewTopCard": SubResource("Animation_dnmcf"),
"RESET": SubResource("Animation_ik7i4")
}

[node name="Discardpile" type="Button"]
offset_left = 900.0
offset_top = 432.0
offset_right = 1020.0
offset_bottom = 648.0
flat = true
script = ExtResource("1_w7cn4")

[node name="CardFrame" type="Control" parent="."]
anchors_preset = 0
offset_right = 120.0
offset_bottom = 216.0
mouse_filter = 2

[node name="Background" type="ColorRect" parent="CardFrame"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 216.0
mouse_filter = 2
color = Color(0.254902, 0.254902, 0.254902, 0.505882)

[node name="TopcardHolder" type="Control" parent="CardFrame"]
anchors_preset = 0
offset_right = 120.0
offset_bottom = 216.0
mouse_filter = 2

[node name="AnimationBody" type="Control" parent="CardFrame"]
visible = false
anchors_preset = 0
offset_top = 130.0
offset_right = 120.0
offset_bottom = 346.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_72avw")
}

[connection signal="child_entered_tree" from="CardFrame/AnimationBody" to="." method="_on_animation_body_child_entered_tree"]
